# GameOfLife

./: CMakeLists.txt  Makefile  a.out  arena.c  arena.h  cell.c  cell.h  cellList.c  cellList.h  cellTable.c  cellTable.h  game.c  game.h  gameoflife  life_00.ppm  main.c  main_page.dox  ppm.c  ppm.h  unit_tests.c  ~1
.github/workflows/: mainCI.yml
GoL Doxygen/: Documentary
GoL Doxygen/html/: annotated.html  arena_8c_source.html  arena_8h_source.html  cellList_8c_source.html  cellList_8h_source.html  cellTable_8c_source.html  cellTable_8h_source.html  cell_8c_source.html  cell_8h_source.html  classes.html  files.html  game_8c_source.html  game_8h_source.html  index.html  structarena-members.html  structarena.html  structcell-members.html  structcell.html  structcellList-members.html  structcellList.html  structcellTable-members.html  structcellTable.html  structgame-members.html  structgame.html
GoL Doxygen/html/search/: all_1.js  all_2.js  classes_0.js  classes_1.js  classes_2.js  searchdata.js
GoL Doxygen/latex/: annotated.tex  refman.aux  refman.dvi  refman.idx  refman.out  refman.tex  refman.toc  structarena.tex  structcell.tex  structcellList.tex  structcellTable.tex  structgame.tex
console/: CMakeLists.txt  board_drawer.c  board_drawer.h
game/: CMakeLists.txt  arena.h  game.c  game.h
game/cellTable/: CMakeLists.txt  cellTable.c  cellTable.h
game/cellTable/arena/: CMakeLists.txt  arena.c  arena.h  cunit_tests.c
game/cellTable/cell/: CMakeLists.txt  cell.c  cell.h
game/cellTable/cellList/: CMakeLists.txt  cellList.c  cellList.h
html/: annotated.html  arena_8c.html  arena_8c__incl.dot  arena_8c__incl.md5  arena_8h.html  arena_8h__dep__incl.dot  arena_8h__dep__incl.md5  arena_8h__incl.dot  arena_8h__incl.md5  arena_8h_source.html  board__drawer_8c.html  board__drawer_8c__incl.dot  board__drawer_8c__incl.md5  board__drawer_8h.html  board__drawer_8h__dep__incl.dot  board__drawer_8h__dep__incl.md5  board__drawer_8h__incl.dot  board__drawer_8h__incl.md5  board__drawer_8h_source.html  cellList_8c.html  cellList_8c__incl.dot  cellList_8c__incl.md5  cellList_8h.html  cellList_8h__dep__incl.dot  cellList_8h__dep__incl.md5  cellList_8h__incl.dot  cellList_8h__incl.md5  cellList_8h_source.html  cellTable_8c.html  cellTable_8c__incl.dot  cellTable_8c__incl.md5  cellTable_8h.html  cellTable_8h__dep__incl.dot  cellTable_8h__dep__incl.md5  cellTable_8h__incl.dot  cellTable_8h__incl.md5  cellTable_8h_source.html  cell_8c.html  cell_8c__incl.dot  cell_8c__incl.md5  (+45 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  classes_0.js  classes_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
sdl/: CMakeLists.txt  draw_sdl.c  draw_sdl.h
